--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -125,9 +125,9 @@
     }
 }
 
-::-webkit-scrollbar {
-    display: none; /* Chrome, Safari, Opera */
-}
+/* ::-webkit-scrollbar {
+    display: none; 
+} */
 
 
 
